--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Elnaz Seylabi"
   avatar           : "elnaz.jpg"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
+  bio              : "Assistant Professor of Civil and Environmental Engineering"
+  location         : "Reno, NV"
+  employer         : "University of Nevada Reno"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=oFRVhaoAAAAJ&hl=en"
-  email            :
+  email            : "elnaze@unr.edu"
   researchgate     :  "https://www.researchgate.net/profile/Elnaz-Seylabi"
   uri              :
   bitbucket        :
