--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,13 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "People"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Research"
     url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Announcements"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
