--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
+  team:
     output: true
     permalink: /:collection/:path/
   portfolio:
@@ -218,15 +218,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _publications
+  # _team
   - scope:
       path: ""
-      type: publications
+      type: team
     values:
       layout: single
       author_profile: true
-      share: true
-      comments: true
+      #share: true
+      #comments: true
   # _portfolio
   - scope:
       path: ""
